# ruckig-frc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  pid.cppm  random.cppm  robot.cppm  window-metal.h  window-metal.mm  window.cppm
.github/workflows/: localrepo.yml  publish.yml  quick-build.yml  release-build.yml
cmake/toolchains/: arm64-toolchain.cmake  athena-toolchain.cmake
docs/vendordep/: ruckig-frc.json
jni/: CMakeLists.txt  build.gradle.kts  ruckig_jni.cpp  settings.gradle.kts
jni/org/recordrobotics/ruckig/: InputParameter3.java  Ruckig3.java  Trajectory3.java
jni/org/recordrobotics/ruckig/enums/: DurationDiscretization.java  Synchronization.java
jni/org/recordrobotics/ruckig/jni/: RuckigJNI.java
jni/org/recordrobotics/ruckig/test/: TestRuckig.java
jni/src/org/recordrobotics/ruckig/: OutputParameter3.java  Ruckig3.java  Trajectory3.java
jni/src/org/recordrobotics/ruckig/enums/: Result.java
jni/src/org/recordrobotics/ruckig/jni/: RuckigJNI.java
jni/src/org/recordrobotics/ruckig/test/: TestRuckig.java
jni/src/org/recordrobotics/ruckig/wpi/: RuckigTelemetry.java
ui/: ruckig.cppm  uimodule.cppm
ui/sources/: ruckig-local.cppm  ruckig-remote.cppm  ruckigsource.cppm
